syntax = "proto3";

package spine.test.validate.field;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.test.validate.field";
option java_outer_classname = "NumberFieldsProto";
option java_multiple_files = true;

message Numbers {

    int32 positive_int = 1 [(min) = { value: "0" exclusive: true }];

    float negative_float = 2 [(max) = { value: "0" exclusive: false }];

    sfixed64 switch = 3 [(range) = "[0..1]"];

    int32 broken_range = 4 [(range) = "2-3"];

    int64 too_many_options = 5 [(min).value = "32", (range) = "[0..73]"];

    int64 yet_more_options = 6 [(max).value = "-1", (range) = "(1..7)"];
}
